--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -47,6 +47,7 @@ a.clickable:hover {
     border-radius: 25px;
     float: left;
     margin-right: 10px;
+    margin-bottom: 10px;
 }
 
 .activity-item-summary span.resolved-link {
