--- a/css/body.css
+++ b/css/body.css
@@ -125,3 +125,50 @@ legend {
     border-top: 0;
     border-bottom: 0;
 }
+
+/*pager*/
+
+.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
+    z-index: 2;
+    cursor: default;
+    border-color: #428bca;
+    border: none;
+    background: #616161;
+    box-shadow: inset 0px 0px 8px rgba(0,0,0, .5), 0px 1px 0px rgba(255,255,255, .8);
+    color: #f0f0f0;
+    text-shadow: 0px 0px 3px rgba(0,0,0, .5);
+    padding-bottom: 2px;
+}
+
+.pager li > a, .pager li > span {
+    display: inline-block;
+    padding: 0px 14px;
+
+    border-radius: 3px;
+    margin-right: 4px;
+    display: inline-block;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+    border: solid 1px #c0c0c0;
+    background: #e9e9e9;
+    box-shadow: inset 0px 1px 0px rgba(255,255,255, .8), 0px 1px 3px rgba(0,0,0, .1);
+    font-size: 1em;
+    font-weight: bold;
+    text-decoration: none;
+    color: #717171;
+    text-shadow: 0px 1px 0px rgba(255,255,255, 1);
+}
+
+.pagination-lg > li:last-child > a, .pagination-lg > li:last-child > span {
+
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
+
+.pagination-lg > li:first-child > a, .pagination-lg > li:first-child > span {
+    -webkit-border-radius : 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+}
