--- a/css/add_client.css
+++ b/css/add_client.css
@@ -61,7 +61,9 @@ div.address-wrapper {
     background-color: #575757;
     background-image: none;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
     -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
