--- a/css/body.css
+++ b/css/body.css
@@ -176,3 +176,64 @@ legend {
 tr.highlight {
     background-color: #f9f9f9;
 }
+
+span.label.label-xs.label-primary.sms {
+    padding-top: 0;
+    padding-bottom: 1px;
+    font-size: 9px;
+    position: relative;
+    display: inline;
+    margin-left: 5px;
+    top: -1px;
+    float: right;
+}
+
+span.label.label-xs.label-primary.sms:hover {
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+    transform: scale(1.2);
+}
+
+ .comment-sidebar:hover {
+     -webkit-transform: scale(1.4);
+     -moz-transform: scale(1.4);
+     -ms-transform: scale(1.4);
+     -o-transform: scale(1.4);
+     transform: scale(1.4);
+}
+
+
+.quick-message {
+    position: fixed;
+    display: block;
+    width: 500px;
+    height: 400px;
+    background-color: #fff;
+    bottom:0;
+    right:30px;
+    z-index: 999999;
+    border: 1px solid #ccc;
+    overflow: hidden;
+    box-shadow: rgba(0,0,0,0.2) 0 2px 6px;
+}
+
+.qm-header {
+    background-color: #404040;
+    position: fixed;
+    bottom: 400px;
+    width: 500px;
+    right: 30px;
+    padding: 10px;
+    color:#fff;
+}
+
+.close-qm {
+    cursor: pointer;
+}
+
+.qm-body {
+    display: none;
+}
