--- a/css/body.css
+++ b/css/body.css
@@ -218,6 +218,8 @@ span.label.label-xs.label-primary.sms:hover {
     border: 1px solid #ccc;
     overflow: hidden;
     box-shadow: rgba(0,0,0,0.2) 0 2px 6px;
+    padding: 0 10px 10px 10px;
+
 }
 
 .qm-header {
@@ -236,4 +238,20 @@ span.label.label-xs.label-primary.sms:hover {
 
 .qm-body {
     display: none;
+}
+
+.form-control.qm {
+    background-color: #fff;
+    color: #333;
+    border: 0;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    margin-bottom: 0;
+    padding-left: 0;
+    margin-right: -15px;
+}
+
+.form-group.qm {
+    margin-bottom: 0;
 }
