--- a/css/top.css
+++ b/css/top.css
@@ -75,13 +75,13 @@ ul.navbar.navbar-left {
     z-index: 1000;
 }
 
-#float-users.active a {
+#float-users.active a, #li-comments.active a {
     color: #25B1FF !important;
     background-color: #292929 !important;
     box-shadow: inset -2px 1px 7px #000000;
 }
 
-#float-users.active {
+#float-users.active, #li-comments.active {
     border: 1px solid rgb(48, 48, 48);
     border-bottom: 0;
     border-top: 0;
