--- a/css/body.css
+++ b/css/body.css
@@ -285,3 +285,42 @@ tr.disabled {
     top: -1px;
     margin-right: 5px !important;
 }
+
+.form-control.filter {
+    display: block;
+    font-size: 12px;
+    line-height: 1.428571;
+    color: #5d5d5d;
+    background-color: #FFFFFF;
+    background-image: none;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075);
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    margin-bottom: 1px;
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.form-control.filter:hover, .form-control.filter:active {
+    border-color: rgba(163, 163, 163, 0.8) !important;
+    -webkit-box-shadow: none !important;
+    -moz-box-shadow: none !important;
+    box-shadow: none !important;
+
+}
+
+.nav-tabs.filter {
+    border-bottom: 0;
+    margin-bottom: -27px;
+    margin-left: -14px;
+}
+
+.tabs-filter {
+    background: none !important;
+    border: none !important;
+}
