--- a/css/body.css
+++ b/css/body.css
@@ -364,6 +364,7 @@ i.fa.fa-times {
     margin: 0 auto;
     margin-top: 30px;
     display:none;
+    border-bottom: 6px solid #BEBEBE;
 }
 
 .task-view-header {
