added demo modal

--- a/css/modal.css
+++ b/css/modal.css
@@ -65,6 +65,25 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
     height: 100%;
 }
 
+#demo_modal .modal-dialog {
+    width: 500px;
+    overflow: auto;
+    background-color: #fff !important;
+    border: none !important;
+}
+
+#demo_modal .modal-dialog .modal-content {
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+    border: 0;
+    border-bottom: 5px solid #aaaaaa;
+}
+
+#demo_modal {
+    top: 20%;
+}
+
 
 
 
