fixed imp tasks

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -405,6 +405,7 @@ i.fa-clock-o {
 
 .sidebar-position {
     font-size: 10px;
+    padding-left: 54px;
 }
 
 .sidebar-position a, .sidebar-position.phone {
