--- a/css/body.css
+++ b/css/body.css
@@ -432,3 +432,15 @@ td .fa-play-circle:hover, td .fa-stop:hover, td .fa-check-circle:hover, td .fa-e
 
     margin-bottom: 0px !important;
 }
+
+.panel {
+    background-color: transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+
+.table {
+    border: 1px solid #ddd;
+    background-color: #fff;
+}
