--- a/css/modal.css
+++ b/css/modal.css
@@ -72,6 +72,10 @@ textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[ty
     border: none !important;
 }
 
+#demo_modal {
+    z-index: 9999999;
+}
+
 #demo_modal .modal-dialog .modal-content {
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
