--- a/css/body.css
+++ b/css/body.css
@@ -457,3 +457,47 @@ td .fa-play-circle:hover, td .fa-stop:hover, td .fa-check-circle:hover, td .fa-e
 .table > thead > tr > td.danger, .table > tbody > tr > td.danger, .table > tfoot > tr > td.danger, .table > thead > tr > th.danger, .table > tbody > tr > th.danger, .table > tfoot > tr > th.danger, .table > thead > tr.danger > td, .table > tbody > tr.danger > td, .table > tfoot > tr.danger > td, .table > thead > tr.danger > th, .table > tbody > tr.danger > th, .table > tfoot > tr.danger > th {
     background-color: #FCF6F6;
 }
+
+
+.icon-tasks, .icon-projects, .icon-client, .icon-menu, .icon-users,  .icon-comment,  .icon-comments   {
+    font-size: 20px;
+    position: relative;
+    display: inline-block;
+    line-height: 0px;
+    top: -1px;
+    padding-left: 0;
+    padding-right: 5px;
+    /* width: 36px; */
+    vertical-align: middle;
+}
+
+.icon-remove {
+    position: absolute;
+    top: 8px;
+    left: 6px;
+    font-size: 13px;
+}
+
+tr .icon-remove {
+    position: relative;
+    top: 0;
+    left: 0;
+
+}
+
+ul.sidebar-nav li {
+    margin-left: -25px;
+}
+
+
+span.icon-book {
+    font-size: 17px;
+    top: 2px;
+    position: relative;
+}
+
+.close-qm .icon-remove {
+    position: relative;
+    top: 0px;
+    padding-right: 10px;
+}
