--- a/css/body.css
+++ b/css/body.css
@@ -1,9 +1,9 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700,800);
+@import url(http://fonts.googleapis.com/css?family=Lato:100,300,400,700,900,100italic,300italic,400italic,700italic,900italic);
 
 body {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 400;
-    background: url('../img/mesh.png') #222;
+    background-color: #222;
 }
 
 h1, .h1, h2, .h2, h3, .h3 {
@@ -19,9 +19,6 @@ h2 {
     overflow: hidden;
     height: 100%;
     background: #fff;
-    /*border-radius:5px;*/
-    /*-webkit-border-radius: 5px;*/
-    /*-moz-border-radius: 5px;*/
     background: url('../img/bgnoise.png');
     width: 98%;
     margin: 0 auto;
@@ -58,9 +55,7 @@ div.navbar-collapse.navbar-inverse.navbar-fixed-top {
     padding-right: 27px;
     padding-left: 15px;
     overflow-x: visible;
-    -webkit-overflow-scrolling: touch;
-    border-top: 1px solid transparent;
-    box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1);
+
 }
 
 .container-fluid {
@@ -500,4 +495,10 @@ span.icon-book {
     position: relative;
     top: 0px;
     padding-right: 10px;
+}
+
+.lead {
+    margin-bottom: 20px;
+    font-weight: 300;
+    line-height: 1.4;
 }
