--- a/css/body.css
+++ b/css/body.css
@@ -497,6 +497,15 @@ span.icon-book {
     padding-right: 10px;
 }
 
+.modal-header .icon-remove {
+    right: 15px;
+    float: right;
+    text-align: right;
+    color: #A3A3A3;
+    padding-top: 1px;
+    cursor: pointer;
+}
+
 .lead {
     margin-bottom: 20px;
     font-weight: 300;
