--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -386,7 +386,6 @@ i.fa-clock-o {
     height: auto;
     background-color: #2c2c2c;
     padding: 10px;
-    margin-bottom: 21px;
     border-bottom: 1px dashed #494949;
 }
 
@@ -402,7 +401,6 @@ i.fa-clock-o {
 
 .sidebar-position {
     font-size: 10px;
-    padding-left: 54px;
     padding-top: 5px;
 }
 
@@ -472,7 +470,10 @@ i.fa-clock-o {
 }
 
 
-
+.statistic-imps {
+    padding: 10px;
+    /*border-top: 1px dashed #636363;*/
+}
 
 
 
