--- a/css/body.css
+++ b/css/body.css
@@ -511,3 +511,47 @@ span.icon-book {
     font-weight: 300;
     line-height: 1.4;
 }
+
+
+
+span#switch-left-bar {
+    color: #fff;
+    z-index: 9999999999;
+    cursor: pointer;
+    width: 30px;
+    padding: 0;
+    float: right;
+    position: relative;
+    display: block;
+    padding-left: 10px;
+    padding-top: 13px;
+}
+
+span#switch-left-bar-back {
+    color: #fff;
+    z-index: 9999999999;
+    cursor: pointer;
+    width: 30px;
+    padding: 0;
+    float: left;
+    position: relative;
+    padding-left: 18px;
+    padding-top: 13px;
+    display: none;
+}
+
+
+.mirror {
+    display:block;
+    -webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
+    -moz-transform: matrix(-1, 0, 0, 1, 0, 0);
+    -o-transform: matrix(-1, 0, 0, 1, 0, 0);
+    transform: matrix(-1, 0, 0, 1, 0, 0);
+    padding-right: 190px;
+
+}
+
+#sidebar-wrapper .icon-comments, #sidebar-wrapper .icon-users, #sidebar-wrapper .icon-tasks , #sidebar-wrapper .icon-projects , #sidebar-wrapper .icon-client, #sidebar-wrapper .icon-menu {
+    padding-right: 15px;
+}
+
