--- a/css/body.css
+++ b/css/body.css
@@ -555,3 +555,8 @@ span#switch-left-bar-back {
     padding-right: 15px;
 }
 
+.sidebar-wrapper-mini {
+    border-right: 1px solid #000;
+    box-shadow: 0px 1px 0px #2C2C2C;
+}
+
