--- a/css/btn.css
+++ b/css/btn.css
@@ -83,7 +83,11 @@ fieldset[disabled] .btn-primary.active {
 }
 
 .btn, .dropdown-mwnu.open  {
-    -webkit-border-radius: 0 !important;
-    -moz-border-radius: 0 !important;
-    border-radius: 0 !important;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+
+.toggle.btn {
+    border-radius: 0;
 }
