--- a/css/body.css
+++ b/css/body.css
@@ -23,7 +23,7 @@ h2 {
     width: 98%;
     margin: 0 auto;
     padding: 5px;
-    margin-top: 31px;
+    margin-top: 52px;
     margin-left: 0;
     padding-bottom: 25px;
     padding-top: 25px;
@@ -114,6 +114,11 @@ legend {
     padding-bottom: 10px;
     padding-left: 1px;
     font-size: 21px;
+}
+
+#qm-point-name {
+    top: 3px;
+    position: relative;
 }
 
 .table > caption + thead > tr:first-child > th, .table > colgroup + thead > tr:first-child > th, .table > thead:first-child > tr:first-child > th, .table > caption + thead > tr:first-child > td, .table > colgroup + thead > tr:first-child > td, .table > thead:first-child > tr:first-child > td {
