--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -221,7 +221,7 @@ input.lights {
     
 }
 
-.search-form {
+.search-form, .search-form-table  {
     float: right !important;
 }
 
@@ -234,3 +234,15 @@ input.lights {
     left: 3px;
     top: 5px;
 }
+
+.search-form-table:before {
+    font-family: 'FontAwesome';
+    content: "\f002";
+    color: rgb(186, 186, 186);
+    font-size: 17px;
+    position: absolute;
+    margin-top: 5px;
+    margin-left: -15px;
+}
+
+
