--- a/css/body.css
+++ b/css/body.css
@@ -347,7 +347,7 @@ i.fa.fa-times {
 
 .task-view-wrapper {
     width: 100%;
-    position: absolute;
+    position: relative;
     z-index: 9999999999;
     top: 0;
     margin: 0 auto;
