--- a/css/modal.css
+++ b/css/modal.css
@@ -135,6 +135,27 @@ padding-bottom: 18px;
     background: rgba(0, 0, 0, 0.7);
 }
 
+#view_task_modal .modal-content {
+    border: 0;
+    -webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
+}
+
+#view_task_modal .modal-dialog {
+   width: 600px;
+}
+
+#view_task_modal .modal-header {
+    padding-bottom: 20px;
+}
+
+#modal-view-body {
+    border-top: 1px solid rgb(228, 228, 228);
+    margin-top: 20px;
+    padding-bottom: 10px;
+}
+
 
 
 
