--- a/css/elements.css
+++ b/css/elements.css
@@ -568,3 +568,14 @@ span#task-timer-stop a, span#task-timer-pause a {
     border-radius: 0;
 }
 
+.alert .close {
+    -webkit-appearance: none;
+    padding: 0;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    top: 3px;
+    margin-top: -1px;
+    margin-right: -2px;
+}
+
