--- a/css/elements.css
+++ b/css/elements.css
@@ -579,3 +579,27 @@ span#task-timer-stop a, span#task-timer-pause a {
     margin-right: -2px;
 }
 
+span.mini-role {
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    display: block;
+    z-index: 1;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 10px;
+    padding-top: 2px;
+    font-weight: bold;
+    color: #FFF;
+    left: 39px;
+    margin-top: -15px;
+}
+
+span.mini-role.grey {
+    background-color: #B0B0B0;
+}
+
+span.mini-role.green {
+    background-color: #15D2C2;
+}
+
