--- a/css/modal.css
+++ b/css/modal.css
@@ -157,43 +157,23 @@ padding-bottom: 18px;
 }
 
 
-#froze-project-modal .modal-content {
+.white-modal .modal-content {
     border: 0;
     -webkit-border-radius: 0;
     -moz-border-radius: 0;
     border-radius: 0;
 }
 
-#froze-project-modal .modal-dialog {
+.white-modal .modal-dialog {
     width: 500px;
 }
 
-
-#froze-project-modal .modal-content {
+.white-modal .modal-content {
     padding: 20px;
 }
-
 
 #froze-project-modal .icon-remove {
     padding-top: 7px;
-}
-
-
-
-#assign_user_modal .modal-content {
-    border: 0;
-    -webkit-border-radius: 0;
-    -moz-border-radius: 0;
-    border-radius: 0;
-}
-
-#assign_user_modal .modal-dialog {
-    width: 500px;
-}
-
-
-#assign_user_modal .modal-content {
-    padding: 20px;
 }
 
 #assign_user_modal .send-comment {
