--- a/css/btn.css
+++ b/css/btn.css
@@ -1,7 +1,7 @@
 .btn-special {
     color: #929292;
     background-color: #575757;
-    border-color: #313131;
+    border-color: #C7C7C7;
 }
 .btn-special:hover,
 .btn-special:focus,
