--- a/css/body.css
+++ b/css/body.css
@@ -91,8 +91,7 @@ label {
     min-height: 20px;
     padding: 19px;
     margin-bottom: 20px;
-    background-color: #1D1D1D;
-    border: 1px dashed #2E2E2E;
+    border: 1px dashed #b6b6b6;
     border-radius: 4px;
     -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
     box-shadow: inset 0 1px 1px rgba(0, 0, 0, .05);
