--- a/less/variables.less
+++ b/less/variables.less
@@ -2,7 +2,6 @@
 // Variables
 // --------------------------------------------------
 
-
 //== Colors
 //
 //## Gray and brand colors for use across Bootstrap.
@@ -17,7 +16,7 @@
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #d9534f;
+@brand-danger:          #FF0000;
 
 
 //== Scaffolding
