--- a/less/style.less
+++ b/less/style.less
@@ -1,8 +1,11 @@
 // Bootstrap library.
 @import 'bootstrap';
+@import 'bootstrap-select';
 
 // TeliaSonera icons
 @import 'ts_icons';
+
+@import "../bower_components/fontawesome/less/font-awesome.less";
 
 // Base-theme overrides.
 @import 'overrides';
