--- a/css/modal.css
+++ b/css/modal.css
@@ -1,4 +1,14 @@
 
+.modal-backdrop {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 0 !important;
+    background-color: #000;
+}
+
 .modal-content-inverse{
     background-color:#222;
     color:#ddd;
