--- a/less/login.less
+++ b/less/login.less
@@ -52,7 +52,7 @@ body {
     position: relative;
     font-size: 16px;
     height: auto;
-    padding: 10px;
+    padding: 0;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -150,4 +150,9 @@ body {
 
 .glyphicon-ok:before {
   content: "";
+}
+
+button.btn.dropdown-toggle.form-control.selectpicker.btn-default {
+  padding-top: 6px;
+  padding-bottom: 6px;
 }
