--- a/less/style.less
+++ b/less/style.less
@@ -1,7 +1,6 @@
 // Bootstrap library.
 @import 'bootstrap';
-@import 'bootstrap-select';
-
+@import "../bower_components/bootstrap-select/less/bootstrap-select.less";
 // TeliaSonera icons
 @import 'ts_icons';
 
