--- a/css/body.css
+++ b/css/body.css
@@ -255,6 +255,11 @@ span.label.label-xs.label-primary.sms:hover {
     margin-bottom: 0;
 }
 
+
+#qm-text:focus {
+   border:0 !important;
+}
+
 #qm-autocomplete {
     font-size: 14px;
     color: #5f5f5f;
@@ -474,6 +479,13 @@ td .fa-play-circle:hover, td .fa-stop:hover, td .fa-check-circle:hover, td .fa-e
     top: 15px;
     left: 9px;
     font-size: 17px;
+}
+
+.close-right-sidebar .icon-remove {
+position: absolute;
+top: 9px;
+left: 7px;
+font-size: 13px;
 }
 
 td .icon-remove {
