--- a/less/variables.less
+++ b/less/variables.less
@@ -16,7 +16,7 @@
 @brand-success:         #5cb85c;
 @brand-info:            #5bc0de;
 @brand-warning:         #f0ad4e;
-@brand-danger:          #FF0000;
+@brand-danger:          #D75B5B;
 
 
 //== Scaffolding
