--- a/css/sidebar_right_open.css
+++ b/css/sidebar_right_open.css
@@ -16,3 +16,21 @@
     box-shadow: 2px 4px 26px 3px black;
 }
 
+.right-float-sidebar.open{
+    margin-left: 0;
+    right: -300px;
+    width: 246px;
+    position: fixed;
+    height: 100%;
+    background-position: 0 -30px;
+    float: right;
+    background-color: #222222 !important;
+    top: 50px;
+    padding-top: 29px;
+    padding-left: 0;
+    -webkit-box-shadow: 2px 4px 26px 3px black;
+    -moz-box-shadow: 2px 4px 26px 3px black;
+    box-shadow: 2px 4px 26px 3px black;
+}
+
+
