fixed right sidebar

--- a/css/sidebar_right_close.css
+++ b/css/sidebar_right_close.css
@@ -2,7 +2,7 @@
 
 .right-float-sidebar{
     margin-left: 0;
-    right: 0px;
+    right: -300px;
     width: 246px;
     position: fixed;
     height: 100%;
@@ -10,6 +10,7 @@
     float: right;
     background-color: #222222;
     top: 50px;
+    padding-top: 29px;
     padding-left: 0;
     -webkit-box-shadow: 2px 4px 26px 3px black;
     -moz-box-shadow: 2px 4px 26px 3px black;
