--- a/css/sidebar_right_close.css
+++ b/css/sidebar_right_close.css
@@ -8,7 +8,7 @@
     height: 100%;
     background-position: 0 -30px;
     float: right;
-    background-color: #222222;
+    background-color: #222222 !important;
     top: 50px;
     padding-top: 29px;
     padding-left: 0;
