--- a/less/login.less
+++ b/less/login.less
@@ -1,7 +1,7 @@
 body {
   padding-top: 40px;
   padding-bottom: 40px;
-  background: url(../img/mesh.png) center center #2C2C2C;
+  background-color: #333;
 
 }
 
