--- a/sass/bootstrap-variables.scss
+++ b/sass/bootstrap-variables.scss
@@ -21,6 +21,12 @@
 // $brand-warning:         #f0ad4e
 // $brand-danger:          #d9534f
 
+//$brand-primary:         #f50;
+//$brand-success:         #5cb85c;
+//$brand-info:            #5bc0de;
+//$brand-warning:         #f0ad4e;
+//$brand-danger:          #d9534f;
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
